--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "banzan",
   "version": "0.1.0",
-  "homepage": "https://Banzan-previews.github.io/main-website/",
+  "homepage": "https://banzan-previews.github.io/main-website/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
